criar documentação e testar cenários